# VRCPost_posting_tool

./: .gitignore  README.md  pyproject.toml
config/: settings.json
src/: __init__.py  __main__.py
src/browser/: __init__.py  auth.py  bridge.py  post.py  session.py  story.py
src/config/: __init__.py  settings.py
src/gui/: __init__.py  calendar_tab.py  events.py  log_tab.py  main_window.py  post_tab.py  random_post_tab.py  schedule_tab.py  settings_tab.py  story_tab.py
src/gui/widgets/: __init__.py
src/scheduler/: __init__.py  connector.py  engine.py  jobs.py
src/utils/: image.py  image_history.py  logger.py  notifier.py
tests/: test_e2e.py  test_e2e_managers.py
tests/test_server/: __init__.py  app.py
tests/test_server/static/: script.js  style.css
tests/test_server/templates/: home.html  login.html
